--- a/Home.css
+++ b/Home.css
@@ -61,11 +61,11 @@
 
 .u-section-2 .u-btn-1 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -85,11 +85,11 @@
 
 .u-section-2 .u-btn-2 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -109,11 +109,11 @@
 
 .u-section-2 .u-btn-3 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -133,11 +133,11 @@
 
 .u-section-2 .u-btn-4 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -157,11 +157,11 @@
 
 .u-section-2 .u-btn-5 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -181,11 +181,11 @@
 
 .u-section-2 .u-btn-6 {
   background-image: none;
-  border-style: none none solid;
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 36px auto 0;
+  border-style: solid;
+  margin: 58px 101px 0 auto;
   padding: 0;
 }
 
@@ -198,6 +198,30 @@
     height: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-4 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-5 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-6 {
+    margin-right: 0;
   }
 }
 
@@ -252,11 +276,11 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 636px;
+  min-height: 794px;
 }
 
 .u-section-3 .u-layout-wrap-1 {
-  margin: 60px auto 60px 0;
+  margin: 60px auto 0 0;
 }
 
 .u-section-3 .u-layout-cell-1 {
@@ -264,7 +288,7 @@
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px 60px 30px 0;
+  padding: 30px 0;
 }
 
 .u-section-3 .u-text-1 {
@@ -272,13 +296,13 @@
   line-height: 39.6px;
   text-transform: none;
   font-weight: 400;
-  margin: 20px 46px 0 0;
+  margin: 10px 48px 0 58px;
 }
 
 .u-section-3 .u-image-1 {
-  width: 399px;
-  height: 349px;
-  margin: 59px auto 0 51px;
+  height: 359px;
+  width: 510px;
+  margin: 64px auto 0 60px;
 }
 
 .u-section-3 .u-layout-cell-2 {
@@ -321,11 +345,14 @@
   }
 
   .u-section-3 .u-text-1 {
+    margin-left: 6px;
     margin-right: 0;
   }
 
   .u-section-3 .u-image-1 {
-    margin-left: 11px;
+    height: 331px;
+    width: 470px;
+    margin-left: 0;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -344,10 +371,6 @@
 
   .u-section-3 .u-layout-cell-1 {
     min-height: 100px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-right: 30px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -374,8 +397,8 @@
     min-height: 817px;
   }
 
-  .u-section-3 .u-container-layout-1 {
-    padding-right: 10px;
+  .u-section-3 .u-text-1 {
+    margin-left: 0;
   }
 
   .u-section-3 .u-container-layout-2 {
@@ -399,39 +422,38 @@
   }
 
   .u-section-3 .u-image-1 {
-    width: 330px;
-    height: 289px;
-    margin-left: 0;
+    height: 239px;
+    width: 340px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 824px;
+  min-height: 541px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 89px 0 60px;
+  margin: 58px 0;
 }.u-section-5 .u-sheet-1 {
-  min-height: 558px;
+  min-height: 807px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 60px 0;
+  margin: 30px 0;
 }.u-section-6 .u-sheet-1 {
-  min-height: 843px;
+  min-height: 571px;
 }
 
 .u-section-6 .u-text-1 {
-  margin: 60px auto 0;
+  font-size: 2.25rem;
+  margin: 60px auto 0 20px;
 }
 
 .u-section-6 .u-text-2 {
-  line-height: 1.8;
   margin: 20px 20px 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-6 .u-text-2 {
+    line-height: 22.4px;
     width: 680px;
-    margin-left: 0;
     margin-right: 0;
   }
 }
@@ -443,6 +465,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-6 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
   .u-section-6 .u-text-2 {
     width: 340px;
   }
@@ -474,7 +500,7 @@
 }
 
 .u-section-7 .u-layout-cell-2 {
-  min-height: 409px;
+  min-height: 545px;
 }
 
 .u-section-7 .u-container-layout-2 {
@@ -482,11 +508,11 @@
 }
 
 .u-section-7 .u-text-1 {
-  margin: 95px auto 0 0;
+  margin: 26px auto 0 11px;
 }
 
 .u-section-7 .u-text-2 {
-  margin: 20px 0 0;
+  margin: 89px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -505,7 +531,7 @@
   }
 
   .u-section-7 .u-layout-cell-2 {
-    min-height: 337px;
+    min-height: 449px;
   }
 }
 
@@ -572,14 +598,13 @@
 }
 
 .u-section-8 .u-text-1 {
-  font-size: 3rem;
-  margin: 92px auto 0;
+  margin: 27px auto 0;
 }
 
 .u-section-8 .u-image-1 {
   width: 415px;
   height: 279px;
-  margin: 21px auto 0;
+  margin: 86px auto 0;
 }
 
 .u-section-8 .u-layout-cell-2 {
@@ -607,6 +632,10 @@
   .u-section-8 .u-layout-cell-1 {
     background-position: 50% 50%;
     min-height: 473px;
+  }
+
+  .u-section-8 .u-text-1 {
+    font-size: 2.25rem;
   }
 
   .u-section-8 .u-image-1 {
@@ -662,271 +691,70 @@
     width: 320px;
     height: 216px;
   }
-} .u-section-9 {
-  background-image: none;
+}.u-section-9 .u-sheet-1 {
+  min-height: 600px;
 }
 
-.u-section-9 .u-sheet-1 {
-  min-height: 540px;
+.u-section-9 .u-video-1 {
+  height: 500px;
+  margin: 50px 0;
 }
 
-.u-section-9 .u-list-1 {
-  grid-template-rows: auto;
-  margin: 60px auto 60px 0;
-}
-
-.u-section-9 .u-repeater-1 {
-  grid-template-columns: calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px);
-  grid-gap: 10px 10px;
-  min-height: 396px;
-}
-
-.u-section-9 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-9 .u-image-1 {
-  height: 247px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-9 .u-text-1 {
-  margin: 22px 1px 0;
-}
-
-.u-section-9 .u-text-2 {
-  margin: 18px 1px 0;
-}
-
-.u-section-9 .u-container-layout-2 {
-  padding: 30px;
-}
-
-.u-section-9 .u-image-2 {
-  height: 247px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-9 .u-text-3 {
-  margin: 22px 1px 0;
-}
-
-.u-section-9 .u-text-4 {
-  margin: 18px 1px 0;
-}
-
-.u-section-9 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-9 .u-image-3 {
-  height: 247px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-9 .u-text-5 {
-  margin: 22px 1px 0;
-}
-
-.u-section-9 .u-text-6 {
-  margin: 18px 1px 0;
-}
-
-.u-section-9 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-9 .u-image-4 {
-  height: 247px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-9 .u-text-7 {
-  margin: 22px 1px 0;
-}
-
-.u-section-9 .u-text-8 {
-  margin: 18px 1px 0;
+.u-section-9 .embed-responsive-1 {
+  position: absolute;
+  width: 178%;
+  left: -39%;
+  height: 178%;
+  top: -39%;
 }
 
 @media (max-width: 1199px) {
-  .u-section-9 .u-sheet-1 {
-    min-height: 471px;
-  }
-
-  .u-section-9 .u-list-1 {
+  .u-section-9 .u-video-1 {
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-9 .u-image-1 {
-    height: 192px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-image-2 {
-    height: 192px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-image-3 {
-    height: 192px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-image-4 {
-    height: 192px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-text-7 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-9 .u-text-8 {
-    margin-left: 0;
-    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-9 .u-repeater-1 {
-    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  .u-section-9 .u-sheet-1 {
+    min-height: 504px;
   }
 
-  .u-section-9 .u-image-1 {
-    height: 329px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-image-2 {
-    height: 329px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-image-3 {
-    height: 329px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-image-4 {
-    height: 329px;
+  .u-section-9 .u-video-1 {
+    height: 404px;
     margin-right: initial;
     margin-left: initial;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-9 .u-repeater-1 {
-    grid-template-columns: 100%;
+  .u-section-9 .u-sheet-1 {
+    min-height: 5px;
   }
 
-  .u-section-9 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-9 .u-image-1 {
-    height: 570px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-9 .u-image-2 {
-    height: 570px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-9 .u-image-3 {
-    height: 570px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-9 .u-image-4 {
-    height: 570px;
+  .u-section-9 .u-video-1 {
+    height: 310px;
     margin-right: initial;
     margin-left: initial;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-9 .u-image-1 {
-    height: 351px;
+  .u-section-9 .u-sheet-1 {
+    min-height: 0;
+  }
+
+  .u-section-9 .u-video-1 {
+    height: 200px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-9 .u-image-2 {
-    height: 351px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-image-3 {
-    height: 351px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-9 .u-image-4 {
-    height: 351px;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-9 .embed-responsive-1 {
+    width: 261%;
+    left: -81%;
+    height: 100%;
+    top: 0%;
   }
 } .u-section-10 {
   background-image: none;
@@ -1165,5 +993,271 @@
 
   .u-section-10 .u-image-4 {
     height: 351px;
+  }
+} .u-section-11 {
+  background-image: none;
+}
+
+.u-section-11 .u-sheet-1 {
+  min-height: 540px;
+}
+
+.u-section-11 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 60px auto 60px 0;
+}
+
+.u-section-11 .u-repeater-1 {
+  grid-template-columns: calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px);
+  grid-gap: 10px 10px;
+  min-height: 396px;
+}
+
+.u-section-11 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-11 .u-image-1 {
+  height: 247px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-11 .u-text-1 {
+  margin: 22px 1px 0;
+}
+
+.u-section-11 .u-text-2 {
+  margin: 18px 1px 0;
+}
+
+.u-section-11 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-11 .u-image-2 {
+  height: 247px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-11 .u-text-3 {
+  margin: 22px 1px 0;
+}
+
+.u-section-11 .u-text-4 {
+  margin: 18px 1px 0;
+}
+
+.u-section-11 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-11 .u-image-3 {
+  height: 247px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-11 .u-text-5 {
+  margin: 22px 1px 0;
+}
+
+.u-section-11 .u-text-6 {
+  margin: 18px 1px 0;
+}
+
+.u-section-11 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-11 .u-image-4 {
+  height: 247px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-11 .u-text-7 {
+  margin: 22px 1px 0;
+}
+
+.u-section-11 .u-text-8 {
+  margin: 18px 1px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-11 .u-sheet-1 {
+    min-height: 471px;
+  }
+
+  .u-section-11 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-1 {
+    height: 192px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-image-2 {
+    height: 192px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-image-3 {
+    height: 192px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-image-4 {
+    height: 192px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-text-7 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-11 .u-text-8 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-11 .u-repeater-1 {
+    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  }
+
+  .u-section-11 .u-image-1 {
+    height: 329px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-2 {
+    height: 329px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-3 {
+    height: 329px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-4 {
+    height: 329px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-11 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-11 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-11 .u-image-1 {
+    height: 570px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-11 .u-image-2 {
+    height: 570px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-11 .u-image-3 {
+    height: 570px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-11 .u-image-4 {
+    height: 570px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-11 .u-image-1 {
+    height: 351px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-2 {
+    height: 351px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-3 {
+    height: 351px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-11 .u-image-4 {
+    height: 351px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
